--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <style>body{font-family:system-ui,sans-serif}@keyframes sos{0%,100%{transform:scale(1)}50%{transform:scale(1.1)}}.sos-btn{animation:sos 1s infinite}</style>
+  <style>body{font-family:system-ui,sans-serif}@keyframes sos{0%,100%{transform:scale(1)}50%{transform:scale(1.1)}}.sos-btn{animation:sos 1s infinite}
+.dark{background:#111827!important;color:#f3f4f6}
+.dark .bg-white{background:#1f2937!important}
+.dark .bg-gray-100{background:#111827!important}
+.dark .bg-gray-200{background:#374151!important}
+.dark .text-gray-500{color:#9ca3af!important}
+.dark .text-gray-400{color:#9ca3af!important}
+.dark .text-gray-600{color:#d1d5db!important}
+.dark .border{border-color:#374151!important}
+.dark .border-t{border-color:#374151!important}
+.dark .shadow-sm{box-shadow:0 1px 2px rgba(0,0,0,0.3)!important}
+.dark input,.dark select,.dark textarea{background:#374151!important;color:#f3f4f6!important;border-color:#4b5563!important}
+.dark input::placeholder{color:#9ca3af!important}
+</style>
 </head>
 <body>
 <div id="root"></div>
@@ -32,12 +45,20 @@ function App(){
   const [showFilters,setShowFilters]=useState(false);
   const [modal,setModal]=useState(null);
   const [urgence,setUrgence]=useState({consulat:'',agence:'',hotelMed:'',hotelMak:'',autre:''});
+  const [darkMode,setDarkMode]=useState(false);
 
   useEffect(()=>{
     const p=storage.get('pelerins');if(p)setPelerins(p);
     const h=storage.get('hotels');if(h)setHotels(h);
     const u=storage.get('urgence');if(u)setUrgence(u);
+    const d=storage.get('darkMode');if(d)setDarkMode(d);
   },[]);
+
+  useEffect(()=>{
+    if(darkMode){document.documentElement.classList.add('dark')}
+    else{document.documentElement.classList.remove('dark')}
+    storage.set('darkMode',darkMode);
+  },[darkMode]);
 
   const save=d=>{setPelerins(d);storage.set('pelerins',d)};
   const saveH=d=>{setHotels(d);storage.set('hotels',d)};
@@ -79,9 +100,12 @@ function App(){
 
   return(
     <div className="min-h-screen bg-gray-100 pb-20">
-      <div className="bg-green-600 text-white px-4 py-3 sticky top-0 z-30 flex items-center gap-3">
-        <span className="text-2xl">🕋</span>
-        <div><div className="font-bold">Omra Guide</div><div className="text-xs text-green-100">{pelerins.length} pèlerin(s)</div></div>
+      <div className="bg-green-600 text-white px-4 py-3 sticky top-0 z-30 flex items-center justify-between">
+        <div className="flex items-center gap-3">
+          <span className="text-2xl">🕋</span>
+          <div><div className="font-bold">Omra Guide</div><div className="text-xs text-green-100">{pelerins.length} pèlerin(s)</div></div>
+        </div>
+        <button onClick={()=>setDarkMode(!darkMode)} className="text-2xl p-2">{darkMode?'☀️':'🌙'}</button>
       </div>
 
       <div className="p-4 space-y-4">
