--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function App(){
   const [appel,setAppel]=useState({});
   const [editId,setEditId]=useState(null);
   const [hotels,setHotels]=useState({medine:[],makkah:[]});
-  const [filters,setFilters]=useState({chambre:'',sexe:'',ageMin:'',ageMax:''});
+  const [filters,setFilters]=useState({chambre:'',sexe:'',ageMin:'',ageMax:'',hotel:''});
   const [showFilters,setShowFilters]=useState(false);
   const [modal,setModal]=useState(null);
   const [urgence,setUrgence]=useState({consulat:'',agence:'',hotelMed:'',hotelMak:'',autre:''});
@@ -53,6 +53,8 @@ function App(){
   const [spirituelTab,setSpirituelTab]=useState('guide');
   const [printModal,setPrintModal]=useState(false);
   const [villeChambres,setVilleChambres]=useState('medine');
+  const [hotelModal,setHotelModal]=useState(false);
+  const [newHotel,setNewHotel]=useState({nom:'',ville:'medine'});
 
   useEffect(()=>{
     const p=storage.get('pelerins');if(p)setPelerins(p);
@@ -73,6 +75,16 @@ function App(){
   const call=n=>n&&(window.location.href='tel:'+n.replace(/\s/g,''));
   const wa=n=>n&&window.open('https://wa.me/'+n.replace(/\s/g,'').replace(/^0/,'33'));
   const age=d=>{if(!d)return null;const t=new Date(),b=new Date(d);let a=t.getFullYear()-b.getFullYear();if(t.getMonth()<b.getMonth()||(t.getMonth()===b.getMonth()&&t.getDate()<b.getDate()))a--;return a};
+
+  const addHotel=()=>{
+    if(!newHotel.nom.trim())return;
+    const updated={...hotels,[newHotel.ville]:[...hotels[newHotel.ville],newHotel.nom.trim()]};
+    setHotels(updated);saveH(updated);setNewHotel({nom:'',ville:'medine'});setHotelModal(false);
+  };
+  const delHotel=(ville,nom)=>{
+    const updated={...hotels,[ville]:hotels[ville].filter(h=>h!==nom)};
+    setHotels(updated);saveH(updated);
+  };
 
   const handleFile=f=>{
     if(!f)return;
@@ -243,6 +255,7 @@ function App(){
     if(search&&!p.nom?.toLowerCase().includes(search.toLowerCase())&&!p.prenom?.toLowerCase().includes(search.toLowerCase()))return false;
     if(filters.chambre&&!p.chambreMedine?.includes(filters.chambre)&&!p.chambreMakkah?.includes(filters.chambre))return false;
     if(filters.sexe&&p.sexe!==filters.sexe)return false;
+    if(filters.hotel&&p.hotelMedine!==filters.hotel&&p.hotelMakkah!==filters.hotel)return false;
     const a=age(p.dateNaissance);
     if(filters.ageMin&&(a===null||a<parseInt(filters.ageMin)))return false;
     if(filters.ageMax&&(a===null||a>parseInt(filters.ageMax)))return false;
@@ -279,6 +292,22 @@ function App(){
               <button onClick={()=>setPrintModal(true)} className="flex flex-col items-center p-3 bg-orange-50 rounded-lg"><span>🖨️</span><span className="text-xs">Imprimer</span></button>
             </div>
           </div>
+          <div className="bg-white rounded-xl p-4 shadow-sm">
+            <div className="flex justify-between items-center mb-3">
+              <div className="font-bold text-sm">🏢 Hôtels</div>
+              <button onClick={()=>setHotelModal(true)} className="text-xs bg-green-100 text-green-700 px-2 py-1 rounded-full">+ Ajouter</button>
+            </div>
+            <div className="grid grid-cols-2 gap-3">
+              <div>
+                <div className="text-sm font-medium text-blue-600 mb-2">📍 Médine</div>
+                {hotels.medine.length?hotels.medine.map(h=><div key={h} className="flex justify-between items-center bg-blue-50 rounded-lg px-2 py-1 mb-1 text-sm"><span>{h}</span><button onClick={()=>delHotel('medine',h)} className="text-red-500">×</button></div>):<div className="text-xs text-gray-400">Aucun hôtel</div>}
+              </div>
+              <div>
+                <div className="text-sm font-medium text-green-600 mb-2">📍 Makkah</div>
+                {hotels.makkah.length?hotels.makkah.map(h=><div key={h} className="flex justify-between items-center bg-green-50 rounded-lg px-2 py-1 mb-1 text-sm"><span>{h}</span><button onClick={()=>delHotel('makkah',h)} className="text-red-500">×</button></div>):<div className="text-xs text-gray-400">Aucun hôtel</div>}
+              </div>
+            </div>
+          </div>
         </>}
 
         {view==='list'&&<>
@@ -289,12 +318,17 @@ function App(){
           </div>
           {showFilters&&<div className="bg-white rounded-xl p-3 shadow-sm">
             <div className="grid grid-cols-2 gap-2 mb-2">
-              <input placeholder="Chambre" value={filters.chambre} onChange={e=>setFilters({...filters,chambre:e.target.value})} className="border rounded px-2 py-1 text-sm"/>
+              <input placeholder="N° Chambre" value={filters.chambre} onChange={e=>setFilters({...filters,chambre:e.target.value})} className="border rounded px-2 py-1 text-sm"/>
               <select value={filters.sexe} onChange={e=>setFilters({...filters,sexe:e.target.value})} className="border rounded px-2 py-1 text-sm"><option value="">Sexe</option><option value="M">Homme</option><option value="F">Femme</option></select>
               <input type="number" placeholder="Âge min" value={filters.ageMin} onChange={e=>setFilters({...filters,ageMin:e.target.value})} className="border rounded px-2 py-1 text-sm"/>
               <input type="number" placeholder="Âge max" value={filters.ageMax} onChange={e=>setFilters({...filters,ageMax:e.target.value})} className="border rounded px-2 py-1 text-sm"/>
+              <select value={filters.hotel} onChange={e=>setFilters({...filters,hotel:e.target.value})} className="border rounded px-2 py-1 text-sm col-span-2">
+                <option value="">Tous les hôtels</option>
+                <optgroup label="Médine">{hotels.medine.map(h=><option key={h} value={h}>{h}</option>)}</optgroup>
+                <optgroup label="Makkah">{hotels.makkah.map(h=><option key={h} value={h}>{h}</option>)}</optgroup>
+              </select>
             </div>
-            <div className="flex justify-between text-xs"><span>{filtered.length}/{pelerins.length}</span><button onClick={()=>setFilters({chambre:'',sexe:'',ageMin:'',ageMax:''})} className="text-green-600">Réinit.</button></div>
+            <div className="flex justify-between text-xs"><span>{filtered.length}/{pelerins.length}</span><button onClick={()=>setFilters({chambre:'',sexe:'',ageMin:'',ageMax:'',hotel:''})} className="text-green-600">Réinit.</button></div>
           </div>}
           {filtered.map(p=><div key={p.id} className="bg-white rounded-xl p-3 shadow-sm flex justify-between items-center">
             <div className="flex items-center gap-3">
@@ -582,6 +616,19 @@ function App(){
           </div>
         </div>
         <button onClick={()=>setPrintModal(false)} className="w-full mt-4 py-2 border rounded-xl">Fermer</button>
+      </div></div>}
+
+      {hotelModal&&<div className="fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4" onClick={()=>setHotelModal(false)}><div className="bg-white rounded-2xl p-5 w-full max-w-sm" onClick={e=>e.stopPropagation()}>
+        <div className="font-bold mb-4">🏢 Ajouter un hôtel</div>
+        <input placeholder="Nom de l'hôtel" value={newHotel.nom} onChange={e=>setNewHotel({...newHotel,nom:e.target.value})} className="w-full border rounded-xl px-3 py-2 mb-3"/>
+        <select value={newHotel.ville} onChange={e=>setNewHotel({...newHotel,ville:e.target.value})} className="w-full border rounded-xl px-3 py-2 mb-3">
+          <option value="medine">📍 Médine</option>
+          <option value="makkah">📍 Makkah</option>
+        </select>
+        <div className="flex gap-2">
+          <button onClick={()=>setHotelModal(false)} className="flex-1 border py-2 rounded-xl">Annuler</button>
+          <button onClick={addHotel} className="flex-1 bg-green-600 text-white py-2 rounded-xl">Ajouter</button>
+        </div>
       </div></div>}
     </div>
   );
