--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@ function App(){
       <div className="p-4 space-y-4">
         {view==='dashboard'&&<>
           <div className="grid grid-cols-2 gap-3">
-            <div className="bg-blue-500 text-white rounded-xl p-4"><div className="text-2xl font-bold">{stats.total}</div><div className="text-xs">Pèlerins</div></div>
-            <div className="bg-purple-500 text-white rounded-xl p-4"><div className="text-2xl font-bold">{stats.fam}</div><div className="text-xs">Familles</div></div>
-            <div className="bg-sky-500 text-white rounded-xl p-4"><div className="text-2xl font-bold">{stats.h}</div><div className="text-xs">Hommes</div></div>
-            <div className="bg-pink-500 text-white rounded-xl p-4"><div className="text-2xl font-bold">{stats.f}</div><div className="text-xs">Femmes</div></div>
-          </div>
+  <button onClick={()=>setView('list')} className="bg-blue-500 text-white rounded-xl p-4 text-left active:scale-95 transition-transform"><div className="text-2xl font-bold">{stats.total}</div><div className="text-xs">Pèlerins</div></button>
+  <button onClick={()=>setView('familles')} className="bg-purple-500 text-white rounded-xl p-4 text-left active:scale-95 transition-transform"><div className="text-2xl font-bold">{stats.fam}</div><div className="text-xs">Familles</div></button>
+  <button onClick={()=>{setFilters({...filters,sexe:'M'});setView('list')}} className="bg-sky-500 text-white rounded-xl p-4 text-left active:scale-95 transition-transform"><div className="text-2xl font-bold">{stats.h}</div><div className="text-xs">Hommes</div></button>
+  <button onClick={()=>{setFilters({...filters,sexe:'F'});setView('list')}} className="bg-pink-500 text-white rounded-xl p-4 text-left active:scale-95 transition-transform"><div className="text-2xl font-bold">{stats.f}</div><div className="text-xs">Femmes</div></button>
+</div>
           <div className="bg-white rounded-xl p-4 shadow-sm">
             <div className="font-bold text-sm mb-3">⚡ Actions</div>
             <div className="grid grid-cols-3 gap-2">
