--- a/index.html
+++ b/index.html
@@ -618,32 +618,19 @@ function App(){
         <button onClick={()=>setPrintModal(false)} className="w-full mt-4 py-2 border rounded-xl">Fermer</button>
       </div></div>}
 
-     {modal==='reset'&&<div className="fixed inset-0 bg-black/70 flex items-center justify-center z-50 p-4" onClick={()=>setModal(null)}>
-  <div className="bg-white rounded-2xl p-6 w-full max-w-sm" onClick={e=>e.stopPropagation()}>
-    <div className="text-center mb-4">
-      <div className="text-5xl mb-3">⚠️</div>
-      <div className="font-bold text-xl mb-2">Réinitialiser la liste ?</div>
-      <div className="text-sm text-gray-600">Cette action supprimera définitivement tous les pèlerins ({pelerins.length}) de la liste.</div>
+      {hotelModal&&<div className="fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4" onClick={()=>setHotelModal(false)}><div className="bg-white rounded-2xl p-5 w-full max-w-sm" onClick={e=>e.stopPropagation()}>
+        <div className="font-bold mb-4">🏢 Ajouter un hôtel</div>
+        <input placeholder="Nom de l'hôtel" value={newHotel.nom} onChange={e=>setNewHotel({...newHotel,nom:e.target.value})} className="w-full border rounded-xl px-3 py-2 mb-3"/>
+        <select value={newHotel.ville} onChange={e=>setNewHotel({...newHotel,ville:e.target.value})} className="w-full border rounded-xl px-3 py-2 mb-3">
+          <option value="medine">📍 Médine</option>
+          <option value="makkah">📍 Makkah</option>
+        </select>
+        <div className="flex gap-2">
+          <button onClick={()=>setHotelModal(false)} className="flex-1 border py-2 rounded-xl">Annuler</button>
+          <button onClick={addHotel} className="flex-1 bg-green-600 text-white py-2 rounded-xl">Ajouter</button>
+        </div>
+      </div></div>}
     </div>
-    <div className="bg-amber-50 border border-amber-200 rounded-lg p-3 mb-4">
-      <div className="text-xs text-amber-800 font-medium mb-2">💡 Avant de réinitialiser :</div>
-      <div className="text-xs text-amber-700">• Pensez à exporter vos données (Excel)</div>
-      <div className="text-xs text-amber-700">• Les hôtels et numéros d'urgence seront conservés</div>
-    </div>
-    <div className="space-y-2">
-      <button onClick={()=>{
-        if(confirm('Êtes-vous vraiment sûr ? Cette action est irréversible !')){
-          save([]);
-          setAppel({});
-          setFilters({chambre:'',sexe:'',ageMin:'',ageMax:'',hotel:''});
-          setModal(null);
-          alert('✅ Liste réinitialisée avec succès');
-        }
-      }} className="w-full bg-red-600 text-white py-3 rounded-xl font-bold">🗑️ Oui, tout supprimer</button>
-      <button onClick={()=>setModal(null)} className="w-full bg-gray-200 py-3 rounded-xl font-bold">Annuler</button>
-    </div>
-  </div>
-</div>}
   );
 }
 
